SERVER-39106 GlobalLock acquisition should throw if its ticket acquisition times out due to max lock timeout

(cherry picked from commit 691ab6da0c38f52f32c1028a8fa7447997ced255)